@@ -3,6 +3,10 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-11-01 20:01 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * .github/workflows/macos.yml
+    + prepare to reuse core artifacts/packages
+
 2025-11-01 12:12 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * hbinfo.mk
     * properly escape $ -> $$ while grepping
